testdata/baselines/reference/submodule/conformance/paramTagNestedWithoutTopLevelObject3.errors.txt
paramTagNestedWithoutTopLevelObject3.js(6,16): error TS2339: Property 'bar' does not exist on type 'object'.


==== paramTagNestedWithoutTopLevelObject3.js (1 errors) ====
    /**
     * @param {object} xyz
     * @param {number} xyz.bar.p
     */
    function g(xyz) {
        return xyz.bar.p;
                   ~~~
!!! error TS2339: Property 'bar' does not exist on type 'object'.
    }